[build-system]
requires = ["setuptools>=61.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "heapcy"
version = "0.1.5"
description = "Cython-accelerated heap utilities"
authors = [
  { name = "Roberto Di Rosa", email = "dirosa.2043388@studenti.uniroma1.it" },
]
readme = "README.md"
license = { file = "LICENSE" }

classifiers = [
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/BobTheBot988/MAYA-Password-Benchmarking-cstruct"
Issues = "https://github.com/BobTheBot988/MAYA-Password-Benchmarking-cstruct/issues"

[tool.setuptools.package-dir]
"" = "."

# Build the Cython extension "heapcy" from heapcy.pyx
[tool.setuptools]
ext-modules = [{ name = "heapcy", sources = ["heapcy.pyx"] }]

# (Optional) Wheels across platforms via cibuildwheel
[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel]
build-frontend = "pip"
skip = "*-musllinux*"
environment = { CFLAGS = "-O3" }
